<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The LineageOS Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="device_settings_title">Device specific settings</string>
    <string name="device_settings_summary">Customise the device specific aspects</string>

    <string name="refresh_rate_title">Refresh rate</string>
    <string name="refresh_rate_summary">Change your device\'s display refresh rate for a better experience</string>
    <string name="enable_high_refresh_rate_title">High refresh rate</string>
    <string name="enable_high_refresh_rate_summary">Enable high refresh rate for a smoother experience</string>
    <string name="current_refresh_rate_info">The display is currently running at <xliff:g id="version">%1$s</xliff:g>Hz</string>

    <string name="display_title">Display</string>
    <string name="dc_dimming_title">DC Dimming</string>
    <string name="dc_dimming_summary">Enable DC Dimming to avoid screen flickering on low brightness levels</string>

    <string name="kcal_settings_title">Display colors</string>
    <string name="kcal_settings_summary">Adjust the color of your display</string>
    <string name="kcal_enable_title">Enable display color configuration</string>
    <string name="kcal_enable_summary">Enables the configuration of the display color for a custom adjustment</string>
    <string name="kcal_not_supported">Display color settings is not supported by the kernel</string>
    <string name="red_slider_title">Red</string>
    <string name="green_slider_title">Green</string>
    <string name="blue_slider_title">Blue</string>
    <string name="kcal_rgb_preference_category_title">RGB</string>
    <string name="kcal_calibration_preference_category_title">Color calibration</string>
    <string name="saturation_slider_title">Saturation</string>
    <string name="reset_default_button_title">Reset to default configuration</string>
    <string name="reset_default_button_summary">Reset all the configurations of this screen</string>
    <string name="contrast_slider_title">Contrast</string>

    <string name="color_profiles">Color profiles</string>
    <string name="color_profile_default">Default</string>
    <string name="color_profile_cold">Cold</string>
    <string name="color_profile_warm">Warm</string>
    <string name="color_profile_saturated">Saturated</string>

    <string name="sound_title">Sound</string>

    <string name="dirac_title">Dirac sound enhancer</string>
    <string name="dirac_summary">Configure sound presets, headset types and more</string>
    <string name="dirac_headset_title">Headset type</string>
    <string name="dirac_preset_title">Sound preset</string>

    <string name="dirac_headset_default">Default</string>
    <string name="dirac_headset_earbuds">Mi Earbuds</string>
    <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
    <string name="dirac_headset_piston_1">Mi Piston 1</string>
    <string name="dirac_headset_general">General Earbuds</string>
    <string name="dirac_headset_general_inear">General In-Ear</string>
    <string name="dirac_headset_piston_basic">Basic Edition</string>
    <string name="dirac_headset_piston_2">Mi Piston 2</string>
    <string name="dirac_headset_piston_standard">Mi Piston 3</string>
    <string name="dirac_headset_headphone">Mi Headphone</string>
    <string name="dirac_headset_piston_youth">Youth Edition</string>
    <string name="dirac_headset_piston_color">Color Edition</string>
    <string name="dirac_headset_in_ear">Mi In-Ear</string>
    <string name="dirac_headset_capsule">Mi Capsule</string>
    <string name="dirac_headset_in_ear_pro">Mi In-Ear Pro</string>
    <string name="dirac_headset_comfort">Mi Comfort</string>
    <string name="dirac_headset_reduction_noise">Mi Noise Cancelling (Type-C)</string>
    <string name="dirac_headset_cancelling">Mi Noise Cancelling (3.5mm)</string>
    <string name="dirac_headset_half_in_ear">Mi Half In-Ear</string>
    <string name="dirac_headset_in_ear2">Mi In-Ear 2</string>
    <string name="dirac_headset_earphone_basic">Mi Earphones Basic</string>
    <string name="dirac_headset_earphone">Mi Earphones</string>

    <string name="dirac_preset_default">Default</string>
    <string name="dirac_preset_rock">Rock</string>
    <string name="dirac_preset_jazz">Jazz</string>
    <string name="dirac_preset_pop">Pop</string>
    <string name="dirac_preset_classical">Classical</string>
    <string name="dirac_preset_hiphop">Hiphop</string>
    <string name="dirac_preset_blues">Blues</string>
    <string name="dirac_preset_electronic">Electronic</string>
    <string name="dirac_preset_country">Country</string>
    <string name="dirac_preset_dance">Dance</string>
    <string name="dirac_preset_metal">Metal</string>

    <string name="dirac_hifi_enable_title"> Enable Hi-fi</string>
    <string name="dirac_hifi_title">Hi-Fi</string>
    <string name="dirac_hifi_summary">Decrease noise and Distortion and increase audio quality</string>
</resources>
